--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+	<body style="background-color:rgb(0, 0, 0);"></body>
 	<head>
 		<title>Otsikko</title>
 
@@ -14,11 +15,11 @@
 
 	p { 	color:ffffff;
 		font-style:italic;
-		font-family:"Book Antiqua", Arial;
+		font-family:"Book Antiqua", Arial;	
 		border-style:solid;
-		border-radius:8px;
-		border-color:#11ff45;
-		background:#73d8e3;
+		border-radius:1;
+		border-color:#000000;
+		background:#000000;
 		text-align:center;
 	}
 	
@@ -34,7 +35,7 @@
 
 	hr {
 		width:50%;
-		height:2px;
+		height:0px;
 	}
 
 	</style>
@@ -43,11 +44,18 @@
 
 	<body>
 
-	<h1>Moi Erno</h1>
+	<h1>
+		
+		<Paras otsikko style="color:rgb(254, 254, 254);">
+						ligma
+	
+		
+	
+	</h1>
 
 
 
-	<hr />
+
 
 	<p>
 	Linkki 
@@ -56,6 +64,7 @@
 
 	</a>
 	,
+	
 	<a href="https://www.youtube.com/" target="https://www.youtube.com/">
 		Youtubeen
 
@@ -68,7 +77,7 @@
 
 	</p>
 	<a href="https://helsinki.inschool.fi/" target="https://helsinki.inschool.fi">
-    <img src="https://media1.tenor.com/m/p194CeXE0mIAAAAd/bought-property.gif"  width="250">
+    <img src="https://media.tenor.com/9yW4Z845Zq8AAAAM/maadrilla.gif"  width="250" hspace="600">
 	</body>
 	</p>
 
