--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <html>
-	<body style="background-color:rgb(0, 0, 0);"></body>
+	<style>        .glow {
+		font-size: 50;
+		color: #fff;
+		text-align: center;
+		text-shadow: 
+			0 0 5px #00ff00, 
+			0 0 10px #00ff00, 
+			0 0 20px #00ff00, 
+			0 0 40px #00ff00, 
+			0 0 80px #00ff00;
+	}</style>
+
+
+	<style>
+		.sigma {
+			color: #ff0000;
+		}
+
+	</style>
+	<style>
+		.greentext {
+		  color: rgb(43, 255, 0);
+		}
+	  </style>
+	<body link="#ee2323" alink="#23ee23" vlink="#2323ee" text="#000012"></body>
+	<body style="background-color:rgb(0, 0, 0);" ></body>
 	<head>
 		<title>Otsikko</title>
 
 	<style type="text/css">
+		
 
 
 
@@ -38,6 +64,29 @@
 		height:0px;
 	}
 
+	#linkkilista{	
+		position:absolute;
+		top:50px;
+		left:10px;
+		width:200px;
+		background-color:#1d1d1d;
+		font-family:arial;
+		font-size:18px;
+}
+	#sigma{
+		position:sticky;
+		top: 50px;
+		left: 520px;
+		align-items: center;
+		width: 500px;
+		height: 200px;
+		background-color: #111111;
+		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+		font-size: 50;
+		color: #00f224;
+		text-align: center;
+	}
+
 	</style>
 
 	</head>
@@ -47,33 +96,26 @@
 	<h1>
 		
 		<Paras otsikko style="color:rgb(254, 254, 254);">
-						ligma
+						<span class="sigma">ligma</span>
 	
 		
 	
 	</h1>
 
 
+<div id="linkkilista">
 
+	<span class="greentext">Linkit:</span><br /><br />
+	<a href="http://www.google.fi" class="linkki">Google</a><br />
+	<a href="http://www.facebook.com" class="linkki">Facebook</a><br />
+	<a href="http://www.youtube.com" class="linkki">Youtube</a><br />
 
+</div>
 
-	<p>
-	Linkki 
-	<a href="https://helsinki.inschool.fi/" target="https://helsinki.inschool.fi">
-		Wilmaan
+<div id="sigma"> 
+<span class="glow"> Sigma</span>
 
-	</a>
-	,
-	
-	<a href="https://www.youtube.com/" target="https://www.youtube.com/">
-		Youtubeen
-
-	</a>
-	,
-	<a href="https://matikki.fi/" target="https://matikki.fi">
-		Matikkiin
-	</a>
-	</p>
+</div>
 
 	</p>
 	<a href="https://helsinki.inschool.fi/" target="https://helsinki.inschool.fi">
