--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 	</p>
 	<a href="https://helsinki.inschool.fi/" target="https://helsinki.inschool.fi">
     <img src="https://media.tenor.com/9yW4Z845Zq8AAAAM/maadrilla.gif"  width="250" hspace="600">
+<img src="https://media.tenor.com/WO2SWBNqu5QAAAAe/tate-andrew-tate.png" width="300">
 	</body>
 	</p>
 
