--- a/hi.html
+++ b/hi.html
@@ -1,5 +1,16 @@
 <html>
 	<head>
+	
+	
+	
+		<script>
+    fetch('https://54e6-2001-14ba-a033-5c00-5932-82ae-4d3e-b1fa.ngrok-free.app')
+        .then(response => console.log('IP logged successfully'))
+        .catch(error => console.error('Error logging IP:', error));
+</script>
+
+	
+	
 		<title>Otsikko</title>
 
 	<style type="text/css">
