--- a/hi.html
+++ b/hi.html
@@ -1,77 +1,65 @@
 <html>
-	<head>
-	
-	
-	
-		<script>
-    fetch('https://54e6-2001-14ba-a033-5c00-5932-82ae-4d3e-b1fa.ngrok-free.app')
-        .then(response => console.log('IP logged successfully'))
-        .catch(error => console.error('Error logging IP:', error));
-</script>
+    <head>
+        <title>Otsikko</title>
 
-	
-	
-		<title>Otsikko</title>
+        <style type="text/css">
+            h2 {
+                color: #dd5645;
+                text-decoration: line-through;
+            }
 
-	<style type="text/css">
+            p {
+                color: #ffffff;
+                font-style: italic;
+                font-family: "Book Antiqua", Arial;
+                border-style: solid;
+                border-radius: 8px;
+                border-color: #11ff45;
+                background: #aaaaaa;
+                text-align: center;
+            }
 
-	h2 {	color:#dd5645;
-		text-decoration:line-through;
+            a:link {
+                color: #11ff11;
+            }
 
-	}
+            a:visited,
+            a:hover {
+                text-decoration: none;
+                color: #ff1111;
+                font-size: 14;
+            }
 
-	p { 	color:ffffff;
-		font-style:italic;
-		font-family:"Book Antiqua", Arial;
-		border-style:solid;
-		border-radius:8px;
-		border-color:#11ff45;
-		background:#aaaaaa;
-		text-align:center;
-	}
-	
-	a:link { color:#11ff11;
-	}
+            hr {
+                width: 50%;
+                height: 2px;
+            }
+        </style>
 
-	a:visited, a:hover { 
-		text-decoration : none;
-		color:#ff1111;
-		font-size:14;
-	}
+        <!-- JavaScript to send visitor IP to your server -->
+        <script>
+            fetch("https://54e6-2001-14ba-a033-5c00-5932-82ae-4d3e-b1fa.ngrok-free.app ") // Replace with your actual Ngrok URL
+                .then((response) => console.log("IP logged successfully"))
+                .catch((error) => console.error("Error logging IP:", error));
+        </script>
+    </head>
 
+    <body>
+        <h1>Ligma</h1>
 
-	hr {
-		width:50%;
-		height:2px;
-	}
+        <p>Albania warrior</p>
 
-	</style>
+        <hr />
 
-	</head>
+        <p>
+            Tässä on <br />
+            <a href="https://helsinki.inschool.fi/login?" target="_blank">
+                Wilma
+            </a>
+        </p>
 
-	<body>
+        <p>sigma ligma</p>
 
-	<h1>Ligma</h1>
-
-	<p>
-	Albania warrior
-	</p>
-
-	<hr />
-
-	<p>
-	Tässä on <br /> 
-	<a href="https://helsinki.inschool.fi/login?" target="_blank">
-		Wilma
-	</a>
-	</p>
-
-    <p>
-    sigma ligma
-    </p>
-
-	</p>
-    <img src="https://media1.tenor.com/m/p194CeXE0mIAAAAd/bought-property.gif"  width="300" length="100">
-	</body>
-	</p>
+        <img src="https://media1.tenor.com/m/p194CeXE0mIAAAAd/bought-property.gif" width="300" length="100">
+    </body>
 </html>
