--- a/hi.html
+++ b/hi.html
@@ -1,65 +1,260 @@
 <html>
-    <head>
-        <title>Otsikko</title>
+	<style>        .glow {
+		font-size: 30;
+		font-family: 'Press Start 2P', sans-serif;
+		color: #fff;
+		text-align: center;
+		text-shadow: 
+			0 0 5px #ffffff, 
+			0 0 10px #ffffff, 
+			0 0 20px #ffffff, 
+			0 0 40px #ffffff, 
+			0 0 60px rgb(255, 255, 255);
+	}</style>
 
-        <style type="text/css">
-            h2 {
-                color: #dd5645;
-                text-decoration: line-through;
-            }
 
-            p {
-                color: #ffffff;
-                font-style: italic;
-                font-family: "Book Antiqua", Arial;
-                border-style: solid;
-                border-radius: 8px;
-                border-color: #11ff45;
-                background: #aaaaaa;
-                text-align: center;
-            }
 
-            a:link {
-                color: #11ff11;
-            }
+<style>
+.glow2 {
+		font-size: 18;
+		font-family: 'Press Start 2P', sans-serif;
+		color: #fff;
+		text-align: center;
+		text-shadow: 
+			0 0 5px rgb(255, 255, 255),
+			0 0 60px rgb(255, 255, 255);
+	}
+</style>
 
-            a:visited,
-            a:hover {
-                text-decoration: none;
-                color: #ff1111;
-                font-size: 14;
-            }
 
-            hr {
-                width: 50%;
-                height: 2px;
-            }
-        </style>
+<style>
+	.glow3 {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #ffffff, 
+				0 0 10px #ffffff, 
+				0 0 20px #ffffff, 
+				0 0 40px #ffffff, 
+				0 0 60px rgb(255, 255, 255);
+		}
+	</style>
+	
 
-        <!-- JavaScript to send visitor IP to your server -->
-        <script>
-            fetch("https://54e6-2001-14ba-a033-5c00-5932-82ae-4d3e-b1fa.ngrok-free.app ") // Replace with your actual Ngrok URL
-                .then((response) => console.log("IP logged successfully"))
-                .catch((error) => console.error("Error logging IP:", error));
-        </script>
-    </head>
 
-    <body>
-        <h1>Ligma</h1>
 
-        <p>Albania warrior</p>
 
-        <hr />
 
-        <p>
-            Tässä on <br />
-            <a href="https://helsinki.inschool.fi/login?" target="_blank">
-                Wilma
-            </a>
-        </p>
 
-        <p>sigma ligma</p>
+	<style>
+		.sigma {
+			color: #ff0000;
+			font-family: 'Press Start 2P', sans-serif;
+		}
+	</style>
 
-        <img src="https://media1.tenor.com/m/p194CeXE0mIAAAAd/bought-property.gif" width="300" length="100">
-    </body>
+
+	<style>
+		.greentext {
+		  color: rgb(43, 255, 0);
+		}
+	  </style>
+	<body background="https://cdn.pixabay.com/photo/2014/06/16/23/39/black-370118_1280.png"></body>
+	<head>
+		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+		<title>Otsikko</title>
+
+	<style type="text/css">
+		
+
+
+
+
+	h2 {	color:#dd5645;
+		text-decoration:line-through;
+
+	}
+	
+
+	#linkkilista{	
+		position:absolute;
+		top: 200px;
+		left:50px;
+		width:150px;
+		background-color:#000000;
+		font-family:arial;
+		font-size:18px;
+		padding: 30px;
+		border-radius: 30px;
+		
+}
+#sigma{
+		position:sticky;
+        margin: auto;
+        width: 50%;
+        top: 50px;
+		align-items: center;
+		width: 180px;
+		border: 3px solid #ffffff; /* Base border color */
+		box-shadow: 0 0 10px #ffffff67, 0 0 20px #ffffff6f, 0 0 40px #ffffffbb;
+		height: 50px;
+		background-color: #111111;
+		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+		font-size: 50;
+		color: #00f224;
+		text-align: center;
+		padding: 30px;
+		border-radius: 30px;
+
+	}
+
+
+	</style>
+
+	</head>
+
+	<body>
+
+<div id="linkkilista">
+
+	<span class="glow2">Linkit:</span><br /><br /><br />
+	<span class="glow3"><a href="index.html"class="linkki">ErnoGPT</a><br /> <br/>
+		<a href="https://helsinki.inschool.fi" class="linkki">Wilma</a>
+</span>
+
+</div>
+
+<div id="sigma"> 
+<span class="glow"> Sigma</span>
+
+</div>
+	<style>
+		/* customizable snowflake styling */
+		.snowflake {
+		  color: #fff;
+		  font-size: 1em;
+		  font-family: Arial, sans-serif;
+		  text-shadow: 0 0 0px #000;
+		}
+		
+		.snowflake,.snowflake .inner{animation-iteration-count:infinite;animation-play-state:running}@keyframes snowflakes-fall{0%{transform:translateY(0)}100%{transform:translateY(110vh)}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;user-select:none;cursor:default;pointer-events:none;animation-name:snowflakes-shake;animation-duration:3s;animation-timing-function:ease-in-out}.snowflake .inner{animation-duration:10s;animation-name:snowflakes-fall;animation-timing-function:linear}.snowflake:nth-of-type(0){left:1%;animation-delay:0s}.snowflake:nth-of-type(0) .inner{animation-delay:0s}.snowflake:first-of-type{left:10%;animation-delay:1s}.snowflake:first-of-type .inner,.snowflake:nth-of-type(8) .inner{animation-delay:1s}.snowflake:nth-of-type(2){left:20%;animation-delay:.5s}.snowflake:nth-of-type(2) .inner,.snowflake:nth-of-type(6) .inner{animation-delay:6s}.snowflake:nth-of-type(3){left:30%;animation-delay:2s}.snowflake:nth-of-type(11) .inner,.snowflake:nth-of-type(3) .inner{animation-delay:4s}.snowflake:nth-of-type(4){left:40%;animation-delay:2s}.snowflake:nth-of-type(10) .inner,.snowflake:nth-of-type(4) .inner{animation-delay:2s}.snowflake:nth-of-type(5){left:50%;animation-delay:3s}.snowflake:nth-of-type(5) .inner{animation-delay:8s}.snowflake:nth-of-type(6){left:60%;animation-delay:2s}.snowflake:nth-of-type(7){left:70%;animation-delay:1s}.snowflake:nth-of-type(7) .inner{animation-delay:2.5s}.snowflake:nth-of-type(8){left:80%;animation-delay:0s}.snowflake:nth-of-type(9){left:90%;animation-delay:1.5s}.snowflake:nth-of-type(9) .inner{animation-delay:3s}.snowflake:nth-of-type(10){left:25%;animation-delay:0s}.snowflake:nth-of-type(11){left:65%;animation-delay:2.5s}
+		</style>
+		<div class="snowflakes" aria-hidden="true">
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		</div>
+		
+
+
 </html>
