--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <html>
 	<style>        .glow {
-		font-size: 50;
+		font-size: 30;
+		font-family: 'Press Start 2P', sans-serif;
 		color: #fff;
 		text-align: center;
 		text-shadow: 
-			0 0 5px #00ff00, 
-			0 0 10px #00ff00, 
-			0 0 20px #00ff00, 
-			0 0 40px #00ff00, 
-			0 0 80px #00ff00;
+			0 0 5px #ffffff, 
+			0 0 10px #ffffff, 
+			0 0 20px #ffffff, 
+			0 0 40px #ffffff, 
+			0 0 60px rgb(255, 255, 255);
 	}</style>
+
+
+
+<style>
+.glow2 {
+		font-size: 18;
+		font-family: 'Press Start 2P', sans-serif;
+		color: #fff;
+		text-align: center;
+		text-shadow: 
+			0 0 5px rgb(255, 255, 255),
+			0 0 60px rgb(255, 255, 255);
+	}
+</style>
+
+
+<style>
+	.glow3 {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #ffffff, 
+				0 0 10px #ffffff, 
+				0 0 20px #ffffff, 
+				0 0 40px #ffffff, 
+				0 0 60px rgb(255, 255, 255);
+		}
+	</style>
+	
+
+
+
+
 
 
 	<style>
 		.sigma {
 			color: #ff0000;
+			font-family: 'Press Start 2P', sans-serif;
 		}
-
 	</style>
+
+
 	<style>
 		.greentext {
 		  color: rgb(43, 255, 0);
 		}
 	  </style>
-	<body link="#ee2323" alink="#23ee23" vlink="#2323ee" text="#000012"></body>
-	<body style="background-color:rgb(0, 0, 0);" ></body>
+	<body background="https://cdn.pixabay.com/photo/2014/06/16/23/39/black-370118_1280.png"></body>
 	<head>
+		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 		<title>Otsikko</title>
 
 	<style type="text/css">
@@ -38,53 +76,37 @@
 		text-decoration:line-through;
 
 	}
-
-	p { 	color:ffffff;
-		font-style:italic;
-		font-family:"Book Antiqua", Arial;	
-		border-style:solid;
-		border-radius:1;
-		border-color:#000000;
-		background:#000000;
-		text-align:center;
-	}
 	
-	a:link { color:#11ff11;
-	}
-
-	a:visited, a:hover { 
-		text-decoration : none;
-		color:#ff1111;
-		font: size 12px;;
-	}
-
-
-	hr {
-		width:50%;
-		height:0px;
-	}
 
 	#linkkilista{	
 		position:absolute;
-		top:50px;
-		left:10px;
-		width:200px;
-		background-color:#1d1d1d;
+		top: 200px;
+		left:50px;
+		width:150px;
+		background-color:#000000;
 		font-family:arial;
 		font-size:18px;
+		padding: 30px;
+		border-radius: 30px;
 }
 	#sigma{
 		position:sticky;
-		top: 50px;
-		left: 520px;
+        margin: auto;
+        width: 50%;
+        top: 50px;
 		align-items: center;
-		width: 500px;
-		height: 200px;
+		width: 180px;
+		border: 3px solid #ffffff; /* Base border color */
+		box-shadow: 0 0 10px #ffffff67, 0 0 20px #ffffff6f, 0 0 40px #ffffffbb;
+		height: 50px;
 		background-color: #111111;
 		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 		font-size: 50;
 		color: #00f224;
 		text-align: center;
+		padding: 30px;
+		border-radius: 30px;
+
 	}
 
 	</style>
@@ -93,22 +115,12 @@
 
 	<body>
 
-	<h1>
-		
-		<Paras otsikko style="color:rgb(254, 254, 254);">
-						<span class="sigma">ligma</span>
-	
-		
-	
-	</h1>
-
-
 <div id="linkkilista">
 
-	<span class="greentext">Linkit:</span><br /><br />
-	<a href="http://www.google.fi" class="linkki">Google</a><br />
-	<a href="http://www.facebook.com" class="linkki">Facebook</a><br />
-	<a href="http://www.youtube.com" class="linkki">Youtube</a><br />
+	<span class="glow2">Linkit:</span><br /><br /><br />
+	<span class="glow3"><a href="hi.html"class="linkki">Takaisin pääsivulle</a><br /> <br/>
+		<a href="https://helsinki.inschool.fi" class="linkki">Wilma</a>
+</span>
 
 </div>
 
@@ -116,21 +128,13 @@
 <span class="glow"> Sigma</span>
 
 </div>
-
-	</p>
-	<a href="https://helsinki.inschool.fi/" target="https://helsinki.inschool.fi">
-    <img src="https://media.tenor.com/9yW4Z845Zq8AAAAM/maadrilla.gif"  width="250" hspace="600">
-<img src="https://media.tenor.com/WO2SWBNqu5QAAAAe/tate-andrew-tate.png" width="300">
-	</body>
-	</p>
-
 	<style>
 		/* customizable snowflake styling */
 		.snowflake {
 		  color: #fff;
 		  font-size: 1em;
 		  font-family: Arial, sans-serif;
-		  text-shadow: 0 0 5px #000;
+		  text-shadow: 0 0 0px #000;
 		}
 		
 		.snowflake,.snowflake .inner{animation-iteration-count:infinite;animation-play-state:running}@keyframes snowflakes-fall{0%{transform:translateY(0)}100%{transform:translateY(110vh)}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;user-select:none;cursor:default;pointer-events:none;animation-name:snowflakes-shake;animation-duration:3s;animation-timing-function:ease-in-out}.snowflake .inner{animation-duration:10s;animation-name:snowflakes-fall;animation-timing-function:linear}.snowflake:nth-of-type(0){left:1%;animation-delay:0s}.snowflake:nth-of-type(0) .inner{animation-delay:0s}.snowflake:first-of-type{left:10%;animation-delay:1s}.snowflake:first-of-type .inner,.snowflake:nth-of-type(8) .inner{animation-delay:1s}.snowflake:nth-of-type(2){left:20%;animation-delay:.5s}.snowflake:nth-of-type(2) .inner,.snowflake:nth-of-type(6) .inner{animation-delay:6s}.snowflake:nth-of-type(3){left:30%;animation-delay:2s}.snowflake:nth-of-type(11) .inner,.snowflake:nth-of-type(3) .inner{animation-delay:4s}.snowflake:nth-of-type(4){left:40%;animation-delay:2s}.snowflake:nth-of-type(10) .inner,.snowflake:nth-of-type(4) .inner{animation-delay:2s}.snowflake:nth-of-type(5){left:50%;animation-delay:3s}.snowflake:nth-of-type(5) .inner{animation-delay:8s}.snowflake:nth-of-type(6){left:60%;animation-delay:2s}.snowflake:nth-of-type(7){left:70%;animation-delay:1s}.snowflake:nth-of-type(7) .inner{animation-delay:2.5s}.snowflake:nth-of-type(8){left:80%;animation-delay:0s}.snowflake:nth-of-type(9){left:90%;animation-delay:1.5s}.snowflake:nth-of-type(9) .inner{animation-delay:3s}.snowflake:nth-of-type(10){left:25%;animation-delay:0s}.snowflake:nth-of-type(11){left:65%;animation-delay:2.5s}
@@ -172,8 +176,138 @@
 		  <div class="snowflake">
 			<div class="inner">❅</div>
 		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
+		  <div class="snowflake">
+			<div class="inner">❅</div>
+		  </div>
 		</div>
 		
 
 
 </html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ErnoGPT</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; }
+        #chatbox { width: 300px;
+            height: 400px;
+            overflow-y: auto; 
+            border: 1px solid #282828; 
+            padding: 10px; 
+            margin: 10px auto; 
+            background-color: #555555;
+            padding: 30px;
+            border-radius: 30px;
+        
+        }
+        #userInput { width: 250px; padding: 5px; border-radius: 10px;}
+        button { padding: 5px 10px; border-radius: 10px;}
+    </style>
+</head>
+<body>
+    <h2>AI Chatbot</h2>
+    <div id="chatbox"></div>
+    <input type="text" id="userInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Lähetä</button>
+
+    <script>
+        async function getResponse(userMessage) {
+            const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "Authorization": "Bearer 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"
+                },
+                body: JSON.stringify({
+                    model: "openchat/openchat-7b:free",
+                    messages: [{ role: "user", content: userMessage }],
+                    max_tokens: 100
+                })
+            });
+            const data = await response.json();
+            return data.choices[0].message.content;
+        }
+
+        function sendMessage() {
+            const userInput = document.getElementById("userInput").value;
+            document.getElementById("chatbox").innerHTML += `<p><b>You:</b> ${userInput}</p>`;
+            getResponse(userInput).then(response => {
+                document.getElementById("chatbox").innerHTML += `<p><b>Erno:</b> ${response}</p>`;
+            })
+        }
+    </script>
+</body>
