--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <div id="linkkilista">
 
 	<span class="glow2">Linkit:</span><br /><br /><br />
-	<span class="glow3"><a href="index.html"class="linkki">ErnoGPT</a><br /> <br/>
+	<span class="glow3"><a href="ernogpt.html"class="linkki">ErnoGPT</a><br /> <br/>
 		<a href="https://helsinki.inschool.fi" class="linkki">Wilma</a>
 </span>
 
