--- a/ernogpt.html
+++ b/ernogpt.html
@@ -118,7 +118,7 @@
 <div id="linkkilista">
 
 	<span class="glow2">Linkit:</span><br /><br /><br />
-	<span class="glow3"><a href="hi.html"class="linkki">Takaisin pääsivulle</a><br /> <br/>
+	<span class="glow3"><a href="index.html"class="linkki">Takaisin pääsivulle</a><br /> <br/>
 		<a href="https://helsinki.inschool.fi" class="linkki">Wilma</a>
 </span>
 
