--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 			0 0 20px #ffffff, 
 			0 0 40px #ffffff, 
 			0 0 60px rgb(255, 255, 255);
-	}</style>
+	}
+	.glow:hover {
+		font-size: 30;
+		font-family: 'Press Start 2P', sans-serif;
+		color: #fff;
+		text-align: center;
+		text-shadow: 
+			0 0 5px #00f429, 
+			0 0 10px #00f429, 
+			0 0 20px #00f429, 
+			0 0 40px #00f429, 
+			0 0 60px #00f429;
 
+	}
 
-
-<style>
 .glow2 {
 		font-size: 18;
 		font-family: 'Press Start 2P', sans-serif;
@@ -24,10 +34,7 @@
 			0 0 5px rgb(255, 255, 255),
 			0 0 60px rgb(255, 255, 255);
 	}
-</style>
 
-
-<style>
 	.glow3 {
 			font-size: 16;
 			font-family: 'Press Start 2P', sans-serif;
@@ -40,8 +47,76 @@
 				0 0 40px #ffffff, 
 				0 0 60px rgb(255, 255, 255);
 		}
+
+		.glow3:hover {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #00f535, 
+				0 0 10px #00f535, 
+				0 0 20px #00f535, 
+				0 0 40px #00f535, 
+				0 0 60px #00f535;
+		}
+
+		.glow4 {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #ffffff, 
+				0 0 10px #ffffff, 
+				0 0 20px #ffffff, 
+				0 0 40px #ffffff, 
+				0 0 60px rgb(255, 255, 255);
+		}
+
+		.glow4:hover {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #00f535, 
+				0 0 10px #00f535, 
+				0 0 20px #00f535, 
+				0 0 40px #00f535, 
+				0 0 60px #00f535;
+		}
+
+		.glow5 {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #ffffff, 
+				0 0 10px #ffffff, 
+				0 0 20px #ffffff, 
+				0 0 40px #ffffff, 
+				0 0 60px rgb(255, 255, 255);
+		}
+
+		.glow5:hover {
+			font-size: 16;
+			font-family: 'Press Start 2P', sans-serif;
+			color: #ffffff;
+			text-align: center;
+			text-shadow: 
+				0 0 5px #00f535, 
+				0 0 10px #00f535, 
+				0 0 20px #00f535, 
+				0 0 40px #00f535, 
+				0 0 60px #00f535;
+		}
+
+
+
 	</style>
-	
+
 
 
 
@@ -91,25 +166,39 @@
 		
 }
 #sigma{
-		position:sticky;
+		position:fixed;
         margin: auto;
-        width: 50%;
+        width: 500px;
         top: 50px;
+		left: 500px;
 		align-items: center;
-		width: 180px;
-		border: 3px solid #ffffff; /* Base border color */
+		border: 3px solid #ffffff;
 		box-shadow: 0 0 10px #ffffff67, 0 0 20px #ffffff6f, 0 0 40px #ffffffbb;
-		height: 50px;
+		height: 20px;
 		background-color: #111111;
 		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-		font-size: 50;
+		font-size: 50;	
 		color: #00f224;
 		text-align: center;
-		padding: 30px;
+		padding: 20px;
 		border-radius: 30px;
-
 	}
-
+#ligma{
+	position:fixed;
+        margin:auto;
+        width: 1000px;
+		height: 500px;
+        top: 150px;
+		left: 300px;
+		align-items:center;
+		border: 3px solid #ffffff;
+		box-shadow: 0 0 10px #ffffff67, 0 0 20px #ffffff6f, 0 0 40px #ffffffbb;
+		background-color: #111111;
+		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+		text-align: center;
+		padding: 30px;
+		border-radius: 10px;
+	}
 
 	</style>
 
@@ -117,21 +206,30 @@
 
 	<body>
 
+
+
+	<div id="ligma">
+
+
+
+
+	</div>
+
 <div id="linkkilista">
 
 	<span class="glow2">Linkit:</span><br /><br /><br />
-	<span class="glow3"><a href="ernogpt.html"class="linkki">ErnoGPT</a><br /> <br/>
-		<a href="https://helsinki.inschool.fi" class="linkki">Wilma</a>
-</span>
+	<span class="glow3"><a href="ernogpt.html"class="linkki">ErnoGPT</a><br /> <br/></span>
+	<span class="glow4"><a href="https://helsinki.inschool.fi" class="linkki">Wilma</a><br /> <br/></span>
+	<span class="glow5"><a href="yahyegpt.html" class="linkki">YahyeGPT</a></span>
+
 
 </div>
 
 <div id="sigma"> 
-<span class="glow"> Sigma</span>
+<span class="glow">Etusivu</span>
 
 </div>
 	<style>
-		/* customizable snowflake styling */
 		.snowflake {
 		  color: #fff;
 		  font-size: 1em;
